--- a/document/templates/document/document_add.html
+++ b/document/templates/document/document_add.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %} {% block content %} {% load static %}
 
 <div class="container">
-  <div class="card assets">
-    <div class="card-header assets-header">
+  <div class="card document">
+    <div class="card-header document__header">
       <i class="fa fa-external-link"></i>
-      <h5 class="card-title assets-header__title">문서 등록</h5>
+      <h5 class="card-title document__title">문서 등록</h5>
     </div>
     <div class="card-body">
       <form class="rental__form">
@@ -76,11 +76,7 @@
           <div class="form-group col-md-5">
             <div class="form-group">
               <label>태그</label>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="#NAC #구축"
-              />
+              <input type="text" class="form-control" placeholder="#NAC #구축" />
             </div>
 
             <div class="form-group">
@@ -96,9 +92,7 @@
           <label for="file_delete">파일 삭제</label>
         </div>
         <div class="form-group document__add">
-          <table
-            class="table table-striped table-bordered table-hover text-center"
-          >
+          <table class="table table-striped table-bordered table-hover text-center">
             <thead>
               <tr>
                 <th>
