--- a/document/templates/document/document_main.html
+++ b/document/templates/document/document_main.html
@@ -1,21 +1,19 @@
 {% extends 'base.html' %} {% block content %} {% load static %}
 
-<div class="container media__768px">
-  <div class="card contents">
-    <div class="card-header content__header">
+<div class="container">
+  <div class="card document">
+    <div class="card-header document__header">
       <i class="fa fa-file-text-o"></i>
-      <h5 class="card-title content__title">문서관리 현황</h5>
+      <h5 class="card-title document__title">문서관리 현황</h5>
     </div>
     <div class="card-body col-md-12">
-      <form class="content__status row">
+      <form class="document__status row">
         <div class="content__project col-md-6 project__card">
           <div class="card">
             <div class="card-header project__card-header">프로젝트</div>
             <div class="card-body project__card-body">
               <ul class="list-group list-group-flush project__lists">
-                <li
-                  class="list-group-item project__list d-flex flex-row justify-content-between align-items-center"
-                >
+                <li class="list-group-item project__list d-flex flex-row justify-content-between align-items-center">
                   <div class="project__list-contents">
                     <div class="project__list-info d-flex flex-row">
                       <div class="project__list-customer">신한금융투자증권</div>
@@ -27,21 +25,15 @@
                     <div class="project__list-manager">By 정세욱 전임</div>
                   </div>
                   <div class="project__list-icons">
-                    <button
-                      class="border-0 btn-transition btn btn-outline-success"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-success">
                       <i class="fa fa-upload"></i>
                     </button>
-                    <button
-                      class="border-0 btn-transition btn btn-outline-danger"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-danger">
                       <i class="fa fa-trash"></i>
                     </button>
                   </div>
                 </li>
-                <li
-                  class="list-group-item project__list d-flex flex-row justify-content-between align-items-center"
-                >
+                <li class="list-group-item project__list d-flex flex-row justify-content-between align-items-center">
                   <div class="project__list-contents">
                     <div class="project__list-info d-flex flex-row">
                       <div class="project__list-customer">신한금융투자증권</div>
@@ -53,22 +45,15 @@
                     <div class="project__list-manager">By 정세욱 전임</div>
                   </div>
                   <div class="project__list-icons">
-                    <button
-                      class="border-0 btn-transition btn btn-outline-success"
-                      type="file"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-success" type="file">
                       <i class="fa fa-upload"></i>
                     </button>
-                    <button
-                      class="border-0 btn-transition btn btn-outline-danger"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-danger">
                       <i class="fa fa-trash"></i>
                     </button>
                   </div>
                 </li>
-                <li
-                  class="list-group-item project__list d-flex flex-row justify-content-between align-items-center"
-                >
+                <li class="list-group-item project__list d-flex flex-row justify-content-between align-items-center">
                   <div class="project__list-contents">
                     <div class="project__list-info d-flex flex-row">
                       <div class="project__list-customer">신한금융투자증권</div>
@@ -80,14 +65,10 @@
                     <div class="project__list-manager">By 정세욱 전임</div>
                   </div>
                   <div class="project__list-icons">
-                    <button
-                      class="border-0 btn-transition btn btn-outline-success"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-success">
                       <i class="fa fa-upload"></i>
                     </button>
-                    <button
-                      class="border-0 btn-transition btn btn-outline-danger"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-danger">
                       <i class="fa fa-trash"></i>
                     </button>
                   </div>
@@ -102,9 +83,7 @@
             <div class="card-header project__card-header">유지보수</div>
             <div class="card-body project__card-body">
               <ul class="list-group list-group-flush project__lists">
-                <li
-                  class="list-group-item project__list d-flex flex-row justify-content-between align-items-center"
-                >
+                <li class="list-group-item project__list d-flex flex-row justify-content-between align-items-center">
                   <div class="project__list-contents">
                     <div class="project__list-info d-flex flex-row">
                       <div class="project__list-customer">신한금융투자증권</div>
@@ -116,21 +95,15 @@
                     <div class="project__list-manager">By 정세욱 전임</div>
                   </div>
                   <div class="project__list-icons">
-                    <button
-                      class="border-0 btn-transition btn btn-outline-success"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-success">
                       <i class="fa fa-upload"></i>
                     </button>
-                    <button
-                      class="border-0 btn-transition btn btn-outline-danger"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-danger">
                       <i class="fa fa-trash"></i>
                     </button>
                   </div>
                 </li>
-                <li
-                  class="list-group-item project__list d-flex flex-row justify-content-between align-items-center"
-                >
+                <li class="list-group-item project__list d-flex flex-row justify-content-between align-items-center">
                   <div class="project__list-contents">
                     <div class="project__list-info d-flex flex-row">
                       <div class="project__list-customer">신한금융투자증권</div>
@@ -142,21 +115,15 @@
                     <div class="project__list-manager">By 정세욱 전임</div>
                   </div>
                   <div class="project__list-icons">
-                    <button
-                      class="border-0 btn-transition btn btn-outline-success"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-success">
                       <i class="fa fa-upload"></i>
                     </button>
-                    <button
-                      class="border-0 btn-transition btn btn-outline-danger"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-danger">
                       <i class="fa fa-trash"></i>
                     </button>
                   </div>
                 </li>
-                <li
-                  class="list-group-item project__list d-flex flex-row justify-content-between align-items-center"
-                >
+                <li class="list-group-item project__list d-flex flex-row justify-content-between align-items-center">
                   <div class="project__list-contents">
                     <div class="project__list-info d-flex flex-row">
                       <div class="project__list-customer">신한금융투자증권</div>
@@ -168,14 +135,10 @@
                     <div class="project__list-manager">By 정세욱 전임</div>
                   </div>
                   <div class="project__list-icons">
-                    <button
-                      class="border-0 btn-transition btn btn-outline-success"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-success">
                       <i class="fa fa-upload"></i>
                     </button>
-                    <button
-                      class="border-0 btn-transition btn btn-outline-danger"
-                    >
+                    <button class="border-0 btn-transition btn btn-outline-danger">
                       <i class="fa fa-trash"></i>
                     </button>
                   </div>
@@ -193,9 +156,7 @@
               주만석님이 최근 등록한 문서
             </div>
             <div class="card-body ">
-              <table
-                class="table table-striped table-bordered table-hover text-center"
-              >
+              <table class="table table-striped table-bordered table-hover text-center" id="myTable1">
                 <thead>
                   <tr>
                     <th>사이트</th>
@@ -237,9 +198,7 @@
               최근 등록된 문서
             </div>
             <div class="card-body">
-              <table
-                class="table table-striped table-bordered table-hover text-center"
-              >
+              <table class="table table-striped table-bordered table-hover text-center" id="myTable2">
                 <thead>
                   <tr>
                     <th>사이트</th>
@@ -283,7 +242,12 @@
   </div>
 </div>
 
-{% endblock %} {% block title %} 문서 현황 {% endblock %} {% block js%}
-
-<script src="{% static 'js/upload.js' %}"></script>
+{% endblock %} {% block title %} 문서 현황 {% endblock %}
+{% block css %}
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+{% endblock %}
+{% block js%}
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/datatable/dataTable.js' %}"></script>
 {% endblock %}
