--- a/document/templates/document/document_search.html
+++ b/document/templates/document/document_search.html
@@ -1,17 +1,15 @@
 {% extends 'base.html' %} {% block content%} {% load static %}
 <div class="container">
-  <div class="card assets">
-    <div class="card-header assets-header">
-      <i class="fa fa-file-text-o"></i>
-      <h5 class="card-title assets-header__title">문서 검색</h5>
+  <div class="card document">
+    <div class="card-header document__header">
+      <i class="fa fa-search"></i>
+      <h5 class="card-title document__title">문서 검색</h5>
     </div>
     <div class="card-body">
       <form class="document__form">
         <div class="form-group">
           <div class="form_group d-flex justify-content-end document__add-btn">
-            <a href="{% url 'document_add' %}"
-              ><button type="button" class="btn btn-outline-info">+</button></a
-            >
+            <a href="{% url 'document_add' %}"><button type="button" class="btn btn-outline-info">+</button></a>
           </div>
           <div class="form-group document__search d-flex flex-row">
             <select class="selectpicker divier__none" title="사이트 명">
@@ -35,19 +33,12 @@
               <option>지원 진행 중</option>
             </select>
             <select class="selectpicker" title="지원유형"> </select>
-            <input
-              type="text"
-              id="datepicker3"
-              class="form-control calendar__start datepicker3"
-              placeholder="&#xf271;"
-              autocomplete="off"
-            />
+            <input type="text" id="datepicker3" class="form-control calendar__start datepicker3" placeholder="&#xf271;"
+              autocomplete="off" />
             <button class="btn btn-primary">검색</button>
           </div>
 
-          <table
-            class="table table-striped table-bordered table-hover text-center"
-          >
+          <table class="table table-striped table-bordered table-hover text-center">
             <thead>
               <tr>
                 <th>사이트</th>
