--- a/sites/templates/sites/sites_add.html
+++ b/sites/templates/sites/sites_add.html
@@ -4,16 +4,17 @@
     <div class="card document">
         <div class="card-header document__header">
             <i class="fa fa-external-link"></i>
-            <h5 class="card-title document__title">문서 등록</h5>
+            <h5 class="card-title document__title">&nbsp;고객사 등록</h5>
         </div>
         <div class="card-body">
-            <form class="rental__form" method="POST">{% csrf_token %}
-                <div class="rental__content form-row">
+            <form class="sites__add" method="POST" name="ajaxform" onsubmit="return checkValues()"
+                action="/sites/add/apply/">{% csrf_token %}
+                <div class="sites__contents form-row">
                     <div class="form-group col-md-12">
                         <div class="form-group">
                             <label>프로젝트 명</label>
-                            <input type="text" class="form-control" placeholder="ex) 한국철도 연성망 구축" autocomplete="off"
-                                id="project_name">
+                            <input type="text" name="project_name" id="project_name" class="form-control"
+                                placeholder="ex) 한국철도 연성망 구축" autocomplete="off">
                         </div>
                         <div class="form-group">
                             <label>고객사</label>
@@ -24,24 +25,8 @@
                             {{ project_form.product }}
                         </div>
                         <div class="form-group">
-                            <label>모델명</label>
-                            {{ project_form.model }}
-                            <select class="selectpicker" title="수량 선택" id="count">
-                                <option value="1">1EA</option>
-                                <option value="2">2EA</option>
-                                <option value="3">3EA</option>
-                                <option value="4">4EA</option>
-                                <option value="5">5EA</option>
-                                <option value="6">6EA</option>
-                                <option value="7">7EA</option>
-                                <option value="8">8EA</option>
-                                <option value="9">9EA</option>
-                                <option value="10">10EA</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
                             <label>진행 상태</label>
-                            <select class="selectpicker" title="진행 상태 여부" id="status">
+                            <select class="selectpicker" name="status" title="진행 상태 여부" id="status">
                                 <option value="P">진행 중</option>
                                 <option value="C">진행 완료</option>
                             </select>
@@ -68,6 +53,16 @@
                         </div>
 
                         <div class="form-group ">
+                            <label>유지보수 주기</label>
+                            <select class="selectpicker" name="cycle" title="유지보수 주기 선택" id="cycle">
+                                <option value="MON">매월</option>
+                                <option value="QUA">분기</option>
+                                <option value="HALF">반기</option>
+                                <option value="YEAR">매년</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group ">
                             <label>유지보수 시작일</label>
                             <input type="text" name="purchase_date" id="mnStDate"
                                 class="form-control calendar__start hasDatepicker" autocomplete="off"
@@ -80,18 +75,18 @@
                                 id="asset_purchase-date" data-provide="datepicker" placeholder="&#xf073;">
                         </div>
                         <div class="form-group">
-                        </div>
-                        <div class="form-group">
                             <label>기 타 </label>
-                            <textarea class="form-control col-sm-12" rows="5" id="sites_comments"></textarea>
+                            <textarea class="form-control col-sm-12" rows="5" id="sites_comments"
+                                name="sites_comments"></textarea>
                         </div>
+
                     </div>
                 </div>
                 <div class="text-right submit-box">
                     <button type="button" class="btn btn-outline-danger" onclick="site_add_cancel()">
                         취소
                     </button>
-                    <button type="button" class="btn btn-outline-secondary" onclick="site_add_apply()">
+                    <button type="submit" class="btn btn-outline-secondary" id="submit-btn">
                         등록
                     </button>
                 </div>
@@ -100,16 +95,18 @@
     </div>
 </div>
 
-{% endblock %} {% block title %} 문서 등록 {% endblock %}
+
+{% endblock %} {% block title %} 고객사 등록 {% endblock %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
 <link rel="stylesheet" href="{% static 'css/datepicker/datepicker3.css' %}">
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'js/add.js' %}"></script>
 <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
 <script src="{% static 'js/datepicker/bootstrap-datepicker.js' %}"></script>
 <script src="{% static 'js/datepicker/bootstrap-datepicker.kr.js' %}"></script>
 <script src="{% static 'js/datepicker/datepicker.js' %}"></script>
+<script src="{% static 'js/sites/jquery.form.js' %}"></script>
+<script src="{% static 'js/sites/add.js' %}"></script>
 {% endblock %}
